--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,7 @@
 html {
     font-size: 16px;
     height: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -116,6 +117,9 @@ body {
     direction: rtl;
     text-align: right;
     -webkit-font-smoothing: antialiased;
+    overflow-x: hidden;
+    position: relative;
+    width: 100%;
 }
 
 #root {
